tests/src/snapshots/fe_compiler_tests__compile_errors__invalid_struct_field.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(&path, &src)"

---
error: Invalid attempt to access struct field
  ┌─ fixtures/compile_errors/invalid_struct_field.fe:8:14
  │
8 │     self.val.foo
  │              ^^^ Not a valid field on the Bar struct


